--- a/index.html
+++ b/index.html
@@ -6,44 +6,44 @@
     </head>
     <body>
         <header>
+           <nav>
             <ul>
-               <nav>
-                <li><a href="">WEBSTUDIO</a></li>
-                <li>Studio</li>
-                <li>Portfolio</li>
-                <li>Contants</li>
-                </nav>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11 (000) 111-11-11"> +11 (000) 111-11-11</a></li>
+                <li><a href="./index.html">WEBSTUDIO</a></li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contants</a></li>
             </ul>
+            </nav>
+            <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+11(000)1111111">+11 (000) 111 11 11</a>
+            </address>
         </header>
         <main>
             <section>
-                <p>
                     <h1>Effective Solutions for Your Business</h1>
-                </p>
-                <button type="button"><img src="./images/button.jpg"></button>
+                <button type="button">Order Service</button>
             </section>
             <section><ul>
-                <li><h3>Strategy</h3>
+                <li><h2>Strategy</h2>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li><h3>Puntcuality</h3>
+                <li><h2>Punctuality</h2>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3>Dilligence</h3>
+            <li><h2>Diligence</h2>
             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving</p></li>
+        <li><h2>Technologies</h2>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
             <section>
                 <h2>Our Team</h2>
                 <ul>
-                    <li><img src="./images/teamcardmg.jpg" width="100" alt="Marc Guerrero, Product Designer"></li>
-                    <li><img src="./images/teamcardtf.jpg" width="100" alt="Tom Ford, Frontend Developer"></li>
-                    <li><img src="./images/teamcardcg.jpg" width="100" alt="Camila Garcia, Marketing"></li>
-                    <li><img src="./images/teamcarddw.jpg" width="100" alt="Danel Wilson, UI Designer"></li>
+                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Marc Guerrero, Product Designer"><h3>Marc Guerrero</h3><p>Product Designer</p></li>
+                    <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
+                    <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3>Camila Garcia</h3><p>Marketing</p></li>
+                    <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
                 </ul>
             </section>
         </main>
