--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <header>
            <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="./index.html">WEBSTUDIO</a></li>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contants</a></li>
@@ -24,23 +24,25 @@
                     <h1>Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
-            <section><ul>
-                <li><h2>Strategy</h2>
+            <section>
+                <h2>Section 2</h2>
+                <ul>
+                <li><h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li><h2>Punctuality</h2>
+                <li><h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h2>Diligence</h2>
+            <li><h3>Diligence</h3>
             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h2>Technologies</h2>
+        <li><h3>Technologies</h3>
         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
             <section>
                 <h2>Our Team</h2>
                 <ul>
-                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Marc Guerrero, Product Designer"><h3>Marc Guerrero</h3><p>Product Designer</p></li>
+                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
                     <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
                     <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3>Camila Garcia</h3><p>Marketing</p></li>
                     <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
@@ -48,7 +50,7 @@
             </section>
         </main>
         <footer>
-            <a href="">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
