--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="">Contants</a></li>
+                <li><a href="">Contancts</a></li>
             </ul>
             </nav>
             <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)1111111">+11 (000) 111 11 11</a>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)1111111">+11 (000) 111 11 11</a></li>
             </address>
         </header>
         <main>
