--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="">Contancts</a></li>
+                <li><a href="">Contacts</a></li>
             </ul>
             </nav>
             <address>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+11(000)1111111">+11 (000) 111 11 11</a></li>
-            </address>
+        </ul>    
+        </address>
         </header>
         <main>
             <section>
