--- a/index.html
+++ b/index.html
@@ -2,33 +2,41 @@
 <html lang ="en">
     <head>
         <meta charset="utf-8">
-        <title>GoIT Homework1</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com"
+        />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin
+        />
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"
+        />
+        <link href="./css/styles.css" rel="stylesheet"
+        />
+        <title>GoIT Homework2</title>
     </head>
     <body>
         <header>
            <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+            <ul class="page-nav">
+                <li><a href="" class="link">Studio</a></li>
+                <li><a href="#portfolio" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
             </nav>
             <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>    
+                <ul class="contacts">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+        </ul>   
         </address>
         </header>
         <main>
-            <section>
-                    <h1>Effective Solutions for Your Business</h1>
+            <section class="section-1">
+                    <h1 class="page-title">Effective Solutions for Your Business</h1>
                 <button type="button">Order Service</button>
             </section>
-            <section>
-                <h2>Section 2</h2>
-                <ul>
+            <section class="section-2">
+                <h2 class="section-title">Section 2</h2>
+                <ul class="s2-ul">
                 <li><h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
@@ -41,14 +49,53 @@
         <li><h3>Technologies</h3>
         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
-            <section>
-                <h2>Our Team</h2>
+            <section class="section-3">
+                <h2 class="section-title">Our Team</h2>
                 <ul>
                     <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
                     <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
                     <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3>Camila Garcia</h3><p>Marketing</p></li>
                     <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
                 </ul>
+            </section>
+            <section class="section-4">
+                <h2 id="portfolio" class="section-title">Our Portfolio</h2>
+                <table>
+                    <tr>
+                        <td>
+                            <img src="./images/op1.jpg">
+                            <h3>Banking App</h3>
+                            App
+                        </td>
+                    <td>
+                        <img src="./images/op2.jpg">
+                        <h3>Cashless Payment</h3>
+                        Marketing
+                    </td>
+                    <td>
+                        <img src="./images/op3.jpg">
+                        <h3>Meditation App</h3>
+                        App
+                    </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <img src="./images/op4.jpg">
+                            <h3>Taxi Service</h3>
+                            Marketing
+                        </td>
+                        <td>
+                            <img src="./images/op5.jpg">
+                            <h3>Screen Illustrations</h3>
+                            Design
+                        </td>
+                        <td>
+                            <img src="./images/op6.jpg">
+                            <h3>Online Courses</h3>
+                            Marketing
+                        </td>
+                    </tr>
+                </table>
             </section>
         </main>
         <footer>
