--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
            <nav>
             <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
             <ul class="page-nav">
-                <li><a href="" class="link">Studio</a></li>
-                <li><a href="#portfolio" class="link">Portfolio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
+                <li><a href="" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
             </nav>
-            <address>
-                <ul class="contacts">
+            <address class="contacts">
+                <ul>
                 <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
         </ul>   
         </address>
         </header>
         <main>
-            <section class="section-1">
+            <section class="effective">
                     <h1 class="page-title">Effective Solutions for Your Business</h1>
-                <button type="button">Order Service</button>
+                <button type="button" class="button">Order Service</button>
             </section>
-            <section class="section-2">
+            <section class="strategy">
                 <h2 class="section-title">Section 2</h2>
-                <ul class="s2-ul">
+                <ul class="ul-strategy">
                 <li><h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
@@ -49,7 +49,7 @@
         <li><h3>Technologies</h3>
         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
-            <section class="section-3">
+            <section class="our-team">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
                     <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
@@ -63,34 +63,34 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="./images/op1.jpg">
+                            <img src="./images/op1.jpg" alt="Banking App">
                             <h3>Banking App</h3>
                             App
                         </td>
                     <td>
-                        <img src="./images/op2.jpg">
+                        <img src="./images/op2.jpg" alt="Cashless Payment">
                         <h3>Cashless Payment</h3>
                         Marketing
                     </td>
                     <td>
-                        <img src="./images/op3.jpg">
+                        <img src="./images/op3.jpg" alt="Meditation App">
                         <h3>Meditation App</h3>
                         App
                     </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="./images/op4.jpg">
+                            <img src="./images/op4.jpg" alt="Taxi Service">
                             <h3>Taxi Service</h3>
                             Marketing
                         </td>
                         <td>
-                            <img src="./images/op5.jpg">
+                            <img src="./images/op5.jpg" alt="Screen Illustrations">
                             <h3>Screen Illustrations</h3>
                             Design
                         </td>
                         <td>
-                            <img src="./images/op6.jpg">
+                            <img src="./images/op6.jpg" alt="Online Courses">
                             <h3>Online Courses</h3>
                             Marketing
                         </td>
