--- a/index.html
+++ b/index.html
@@ -37,69 +37,62 @@
             <section class="strategy">
                 <h2 class="section-title">Section 2</h2>
                 <ul class="ul-strategy">
-                <li><h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <li><h3 class="smaller-title">Strategy</h3>
+                    <p class="list">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li><h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li><h3 class="smaller-title"></h3>>Punctuality</h3>
+                <p class="list">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li><h3 class="smaller-title"></h3>>Diligence</h3>
+            <p class="list">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h3>Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        <li><h3 class="smaller-title"></h3>>Technologies</h3>
+        <p class="list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
             <section class="our-team">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
-                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
-                    <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
-                    <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3>Camila Garcia</h3><p>Marketing</p></li>
-                    <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title"></h3>>Mark Guerrero</h3><p class="list">Product Designer</p></li>
+                    <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3 class="smaller-title"></h3>>Tom Ford</h3><p class="list">Frontend Developer</p></li>
+                    <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title"></h3>>Camila Garcia</h3><p class="list">Marketing</p></li>
+                    <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title"></h3>>Daniel Wilson</h3><p class="list">UI Designer</p></li>
                 </ul>
             </section>
-            <section class="section-4">
+            <section class="portfolio">
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
-                <table>
-                    <tr>
-                        <td>
-                            <img src="./images/op1.jpg" alt="Banking App">
-                            <h3>Banking App</h3>
-                            App
-                        </td>
-                    <td>
-                        <img src="./images/op2.jpg" alt="Cashless Payment">
-                        <h3>Cashless Payment</h3>
-                        Marketing
-                    </td>
-                    <td>
-                        <img src="./images/op3.jpg" alt="Meditation App">
-                        <h3>Meditation App</h3>
-                        App
-                    </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img src="./images/op4.jpg" alt="Taxi Service">
-                            <h3>Taxi Service</h3>
-                            Marketing
-                        </td>
-                        <td>
-                            <img src="./images/op5.jpg" alt="Screen Illustrations">
-                            <h3>Screen Illustrations</h3>
-                            Design
-                        </td>
-                        <td>
-                            <img src="./images/op6.jpg" alt="Online Courses">
-                            <h3>Online Courses</h3>
-                            Marketing
-                        </td>
-                    </tr>
-                </table>
+                <ul>
+                    <li>
+                        <img src="./images/op1.jpg" alt="Banking App">
+                        <h3>Banking App</h3>
+                        <p>App</p>
+                    </li>
+                <li>
+                    <img src="./images/op2.jpg" alt="Cashless Payment">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/op3.jpg" alt="Meditation App">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                    <li><img src="./images/op4.jpg" alt="Taxi Service">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                    </li>
+                    <li><img src="./images/op5.jpg" alt="Screen Illustrations">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                    </li>
+                    <li><img src="./images/op6.jpg" alt="Online Courses">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                    </li>
+        </ul>
             </section>
         </main>
         <footer>
-            <a href="./index.html">WebStudio</a>
+            <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
