--- a/index.html
+++ b/index.html
@@ -62,38 +62,38 @@
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
                 <ul>
                     <li>
-                        <img src="./images/op1.jpg" alt="Banking App">
-                        <h3>Banking App</h3>
-                        <p>App</p>
+                        <img src="./images/op1.jpg" alt="Banking App" width="360">
+                        <h3 class="smaller-title">Banking App</h3>
+                        <p class="list">App</p>
                     </li>
                 <li>
-                    <img src="./images/op2.jpg" alt="Cashless Payment">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <img src="./images/op2.jpg" alt="Cashless Payment" width="360">
+                    <h3 class="smaller-title">Cashless Payment</h3>
+                    <p class="list">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/op3.jpg" alt="Meditation App">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <img src="./images/op3.jpg" alt="Meditation App" width="360">
+                    <h3 class="smaller-title">Meditation App</h3>
+                    <p class="list">App</p>
                 </li>
-                    <li><img src="./images/op4.jpg" alt="Taxi Service">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <li><img src="./images/op4.jpg" alt="Taxi Service" width="360">
+                    <h3 class="smaller-title">Taxi Service</h3>
+                    <p class="list">Marketing</p>
                     </li>
-                    <li><img src="./images/op5.jpg" alt="Screen Illustrations">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <li><img src="./images/op5.jpg" alt="Screen Illustrations" width="360">
+                    <h3 class="smaller-title">Screen Illustrations</h3>
+                    <p class="list">Design</p>
                     </li>
-                    <li><img src="./images/op6.jpg" alt="Online Courses">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <li><img src="./images/op6.jpg" alt="Online Courses" width="360">
+                    <h3 class="smaller-title">Online Courses</h3>
+                    <p class="list">Marketing</p>
                     </li>
         </ul>
             </section>
         </main>
-        <footer>
-            <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <footer class="footer">
+            <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
     </body>
 </html>
