--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <section class="our-team">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
-                    <li><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="list">Product Designer</p></li>
-                    <li><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3 class="smaller-title">Tom Ford</h3><p class="list">Frontend Developer</p></li>
-                    <li><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title">Camila Garcia</h3><p class="list">Marketing</p></li>
-                    <li><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="list">UI Designer</p></li>
+                    <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="list">Product Designer</p></li>
+                    <li class="point"><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3 class="smaller-title">Tom Ford</h3><p class="list">Frontend Developer</p></li>
+                    <li class="point"><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title">Camila Garcia</h3><p class="list">Marketing</p></li>
+                    <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="list">UI Designer</p></li>
                 </ul>
             </section>
             <section class="portfolio">
