--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         />
         <link href="./css/styles.css" rel="stylesheet"
         />
+        <link href="./css/modern-normalize.css" rel="stylesheet"/>
         <title>GoIT Homework2</title>
     </head>
     <body>
-        <header>
+        <header class="header container">
            <nav>
             <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
             <ul class="page-nav">
@@ -22,15 +23,15 @@
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
             </nav>
-            <address class="contacts">
-                <ul>
+            <address>
+                <ul class="contacts">
                 <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
         </ul>   
         </address>
         </header>
         <main>
-            <section class="effective">
+            <section class="effective section container">
                     <h1 class="page-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
             </section>
@@ -49,7 +50,7 @@
         <li><h3 class="smaller-title">>Technologies</h3>
         <p class="list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section>
-            <section class="our-team">
+            <section class="our-team section container">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
                     <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="list">Product Designer</p></li>
@@ -58,7 +59,7 @@
                     <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="list">UI Designer</p></li>
                 </ul>
             </section>
-            <section class="portfolio">
+            <section class="portfolio section container">
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
                 <ul>
                     <li>
