--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
         />
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"
         />
+        <link href="./css/modern-normalize.css" rel="stylesheet"/>
         <link href="./css/styles.css" rel="stylesheet"
         />
-        <link href="./css/modern-normalize.css" rel="stylesheet"/>
         <title>GoIT Homework2</title>
     </head>
     <body>
-        <header class="header container">
-           <nav>
+        <header class="header">
+            <div class="header-cont container">
+           <nav class="nav">
             <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
             <ul class="page-nav">
                 <li><a href="./index.html" class="link">Studio</a></li>
