--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
         </ul>   
         </address>
+        </div>
         </header>
         <main>
+            <div class="container">
             <section class="effective section container">
                     <h1 class="page-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
@@ -50,8 +52,9 @@
         </li>
         <li><h3 class="smaller-title">>Technologies</h3>
         <p class="list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-            </ul></section>
-            <section class="our-team section container">
+            </ul></section></div>
+            <div class="container">
+                <section class="our-team section container">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
                     <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="list">Product Designer</p></li>
@@ -59,7 +62,7 @@
                     <li class="point"><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title">Camila Garcia</h3><p class="list">Marketing</p></li>
                     <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="list">UI Designer</p></li>
                 </ul>
-            </section>
+            </section></div>
             <section class="portfolio section container">
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
                 <ul>
