--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         />
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"
         />
-        <link href="./css/modern-normalize.css" rel="stylesheet"/>
+        <link href="./css/modern-normalize.min.css" rel="stylesheet"/>
         <link href="./css/styles.css" rel="stylesheet"
         />
         <title>GoIT Homework2</title>
