--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <li><h3 class="smaller-title">Punctuality</h3>
                 <p class="list">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3 class="smaller-title">>Diligence</h3>
+            <li><h3 class="smaller-title">Diligence</h3>
             <p class="list">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h3 class="smaller-title">>Technologies</h3>
+        <li><h3 class="smaller-title">Technologies</h3>
         <p class="list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section></div>
             <div class="container">
