--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <div class="container">
                     <h1 class="page-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
+                </div>
             </section>
+            <div>
             <section class="strategy">
                 <h2 class="section-title">Section 2</h2>
                 <ul class="ul-strategy">
