--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
         </div>
         </header>
         <main>
-            <section class="effective section container">
+            <section class="effective">
                 <div class="container">
                     <h1 class="page-title">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
                 </div>
             </section>
-            <div>
             <section class="strategy">
-                <h2 class="section-title">Section 2</h2>
+                <div class="container">
+                <h2 class="section-title visually-hidden">Section 2</h2>
                 <ul class="ul-strategy">
-                <li><h3 class="smaller-title">Strategy</h3>
-                    <p class="list">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <li><h3 class="strategy-title">Strategy</h3>
+                    <p class="strategy-list">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li><h3 class="smaller-title">Punctuality</h3>
-                <p class="list">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li><h3 class="strategy-title">Punctuality</h3>
+                <p class="strategy-list">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3 class="smaller-title">Diligence</h3>
-            <p class="list">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li><h3 class="strategy-title">Diligence</h3>
+            <p class="strategy-list">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h3 class="smaller-title">Technologies</h3>
-        <p class="list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        <li><h3 class="strategy-title">Technologies</h3>
+        <p class="strategy-list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul></section></div>
-            <div class="container">
-                <section class="our-team section container">
+                <section class="our-team">
+                    <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul>
                     <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="list">Product Designer</p></li>
