--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
                 <div class="container">
                 <h2 class="section-title visually-hidden">Section 2</h2>
                 <ul class="ul-strategy">
-                <li><h3 class="strategy-title">Strategy</h3>
-                    <p class="strategy-list">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <li class="strategy-list"><h3 class="strategy-title">Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li><h3 class="strategy-title">Punctuality</h3>
-                <p class="strategy-list">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="strategy-list"><h3 class="strategy-title">Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li><h3 class="strategy-title">Diligence</h3>
-            <p class="strategy-list">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li class="strategy-list"><h3 class="strategy-title">Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li><h3 class="strategy-title">Technologies</h3>
-        <p class="strategy-list">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
-            </ul></section></div>
+        <li class="strategy-list"><h3 class="strategy-title">Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+            </ul></div></section>
                 <section class="our-team">
                     <div class="container">
                 <h2 class="section-title">Our Team</h2>
@@ -64,7 +64,8 @@
                     <li class="point"><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title">Camila Garcia</h3><p class="desc">Marketing</p></li>
                     <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="desc">UI Designer</p></li>
                 </ul>
-            </section></div>
+            </div>
+            </section>
             <section class="portfolio section container">
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
                 <ul>
