--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                     <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="ul-strategy">
-                    <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><h3 class="smaller-title">Mark Guerrero</h3><p class="desc">Product Designer</p></li>
-                    <li class="point"><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><h3 class="smaller-title">Tom Ford</h3><p class="desc">Frontend Developer</p></li>
-                    <li class="point"><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><h3 class="smaller-title">Camila Garcia</h3><p class="desc">Marketing</p></li>
-                    <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><h3 class="smaller-title">Daniel Wilson</h3><p class="desc">UI Designer</p></li>
+                    <li class="point"><img src="./images/teamcardmg.jpg" width="264" alt="Mark Guerrero, Product Designer"><div class="nametag"><h3 class="smaller-title">Mark Guerrero</h3><p class="desc">Product Designer</p></div></li>
+                    <li class="point"><img src="./images/teamcardtf.jpg" width="264" alt="Tom Ford, Frontend Developer"><div class="nametag"><h3 class="smaller-title">Tom Ford</h3><p class="desc">Frontend Developer</p></div></li>
+                    <li class="point"><img src="./images/teamcardcg.jpg" width="264" alt="Camila Garcia, Marketing"><div class="nametag"><h3 class="smaller-title">Camila Garcia</h3><p class="desc">Marketing</p></div></li>
+                    <li class="point"><img src="./images/teamcarddw.jpg" width="264" alt="Daniel Wilson, UI Designer"><div class="nametag"><h3 class="smaller-title">Daniel Wilson</h3><p class="desc">UI Designer</p></div></li>
                 </ul>
             </div>
             </section>
