--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
             <section class="strategy">
                 <div class="container">
-                <h2 class="section-title visually-hidden">Section 2</h2>
+                <h2 class="visually-hidden">Section 2</h2>
                 <ul class="ul-strategy">
                 <li class="strategy-list"><h3 class="strategy-title">Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
