--- a/index.html
+++ b/index.html
@@ -66,37 +66,40 @@
                 </ul>
             </div>
             </section>
-            <section class="portfolio section container">
+            <section class="portfolio section">
+                <div class="container">
                 <h2 id="portfolio" class="section-title">Our Portfolio</h2>
-                <ul>
-                    <li>
+                <ul class="portfolio-ul">
+                    <li class="portfolio-list">
                         <img src="./images/op1.jpg" alt="Banking App" width="360">
-                        <h3 class="smaller-title">Banking App</h3>
-                        <p class="list">App</p>
+                        <div class="portfolio-desc"><h3 class="smaller-title">Banking App</h3>
+                        <p class="list">App</p></div>
                     </li>
-                <li>
+                <li class="portfolio-list">
                     <img src="./images/op2.jpg" alt="Cashless Payment" width="360">
-                    <h3 class="smaller-title">Cashless Payment</h3>
-                    <p class="list">Marketing</p>
+                    <div class="portfolio-desc"><h3 class="smaller-title">Cashless Payment</h3>
+                    <p class="list">Marketing</p></div>
                 </li>
-                <li>
+                <li class="portfolio-list">
                     <img src="./images/op3.jpg" alt="Meditation App" width="360">
-                    <h3 class="smaller-title">Meditation App</h3>
-                    <p class="list">App</p>
+                    <div class="portfolio-desc"><h3 class="smaller-title">Meditation App</h3>
+                    <p class="list">App</p></div>
                 </li>
-                    <li><img src="./images/op4.jpg" alt="Taxi Service" width="360">
-                    <h3 class="smaller-title">Taxi Service</h3>
-                    <p class="list">Marketing</p>
+                    <li class="portfolio-list"><img src="./images/op4.jpg" alt="Taxi Service" width="360">
+                    <div class="portfolio-desc"><h3 class="smaller-title">Taxi Service</h3>
+                    <p class="list">Marketing</p></div>
                     </li>
-                    <li><img src="./images/op5.jpg" alt="Screen Illustrations" width="360">
-                    <h3 class="smaller-title">Screen Illustrations</h3>
-                    <p class="list">Design</p>
+                    <li class="portfolio-list"><img src="./images/op5.jpg" alt="Screen Illustrations" width="360">
+                    <div class="portfolio-desc"><h3 class="smaller-title">Screen Illustrations</h3>
+                    <p class="list">Design</p></div>
                     </li>
-                    <li><img src="./images/op6.jpg" alt="Online Courses" width="360">
-                    <h3 class="smaller-title">Online Courses</h3>
-                    <p class="list">Marketing</p>
+                    <li class="portfolio-list"><img src="./images/op6.jpg" alt="Online Courses" width="360">
+                    <div class="portfolio-desc">
+                        <h3 class="smaller-title">Online Courses</h3>
+                    <p class="list">Marketing</p></div>
                     </li>
         </ul>
+        </div>
             </section>
         </main>
         <footer class="footer">
