--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
             </section>
         </main>
         <footer class="footer">
-            <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
+            <div>
+            <a href="./index.html" class="box-footer">Web<span class="logo-footer">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </footer>
+       </div>
+     </footer>
     </body>
 </html>
