--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </section>
         </main>
         <footer class="footer">
-            <div>
+            <div class="container">
             <a href="./index.html" class="box-footer">Web<span class="logo-footer">Studio</span></a>
             <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
        </div>
