--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin
         />
+        <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"
         />
-        <link href="./css/modern-normalize.min.css" rel="stylesheet"/>
         <link href="./css/styles.css" rel="stylesheet"
         />
         <title>GoIT Homework2</title>
