--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</section>
 			<section class="portfolio section">
 				<div class="container">
-					<h2 id="portfolio" class="section-title">Our Portfolio</h2>
+					<h2 id="portfolio">Our Portfolio</h2>
 					<ul class="portfolio-ul">
 						<li class="portfolio-list">
 							<img src="./images/op1.jpg" alt="Banking App" width="360" />
