--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 					</ul>
 				</div>
 			</section>
-			<section class="portfolio section">
+			<section class="section">
 				<div class="container">
-					<h2 id="portfolio">Our Portfolio</h2>
+					<h2 id="portfolio" class="portfolio">Our Portfolio</h2>
 					<ul class="portfolio-ul">
 						<li class="portfolio-list">
 							<img src="./images/op1.jpg" alt="Banking App" width="360" />
