--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								alt="Mark Guerrero, Product Designer"
 							/>
 							<div class="nametag">
-								<h3 class="smaller-title">Mark Guerrero</h3>
+								<h3 class="name">Mark Guerrero</h3>
 								<p class="desc">Product Designer</p>
 							</div>
 						</li>
@@ -106,7 +106,7 @@
 								alt="Tom Ford, Frontend Developer"
 							/>
 							<div class="nametag">
-								<h3 class="smaller-title">Tom Ford</h3>
+								<h3 class="name">Tom Ford</h3>
 								<p class="desc">Frontend Developer</p>
 							</div>
 						</li>
@@ -117,7 +117,7 @@
 								alt="Camila Garcia, Marketing"
 							/>
 							<div class="nametag">
-								<h3 class="smaller-title">Camila Garcia</h3>
+								<h3 class="name">Camila Garcia</h3>
 								<p class="desc">Marketing</p>
 							</div>
 						</li>
@@ -128,7 +128,7 @@
 								alt="Daniel Wilson, UI Designer"
 							/>
 							<div class="nametag">
-								<h3 class="smaller-title">Daniel Wilson</h3>
+								<h3 class="name">Daniel Wilson</h3>
 								<p class="desc">UI Designer</p>
 							</div>
 						</li>
